rollouts/v1/rollout-provider.yaml
kind: Rollout
apiVersion: argoproj.io/v1alpha1
metadata:
  name: dubbo3-provider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dubbo3-provider
  template:
    metadata:
      labels:
        app: dubbo3-provider
        sidecar.istio.io/inject: "true"
        version: v1
    spec:
      containers:
        - name: container-1
          image: release-ci.daocloud.io/mspider/spring-dubbo3-provider:v0.2
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 512Mi
          readinessProbe:
            initialDelaySeconds: 15
            periodSeconds: 10
            tcpSocket:
              port: 20880
  strategy:
    canary:
      trafficRouting:
        istio:
          virtualService:
            name: provider
            routes:
              - test-v1
          destinationRule:
            name: dubbo-provider
            stableSubsetName: stable
            canarySubsetName: canary
      steps:
        - setWeight: 5
        - pause:
            duration: 10m
        - setWeight: 50
        - pause:
            duration: 10m
