rollouts/v1/svc-consumer.yaml
kind: Service
apiVersion: v1
metadata:
  name: dubbo3-consumer
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 8080
  selector:
    app: dubbo3-consumer
  type: ClusterIP
