rollouts/v1/dr-provider.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dubbo-provider
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  host: dubbo3-provider
  subsets:
    - labels:
        app: dubbo3-provider
      name: stable
    - labels:
        app: dubbo3-provider
      name: canary
  trafficPolicy:
    connectionPool:
      http:
        http2MaxRequests: 10000
